# libtext

./: .gitignore  CMakeLists.txt  README.md  bWORKSPACE  bazel-bin  bazel-libtext  bazel-out  bazel-testlogs
CMake/: deps.cmake
cmake/: carbin_deps.cmake
cmake/modules/: carbin_cc_library.cmake
conda/: conda_build_config.yaml  environment.yaml  meta.yaml
examples/: CMakeLists.txt  seg_demo.cc
libtext/: BUILD.bazel  CMakeLists.txt
libtext/common/: CMakeLists.txt  cedar.h  cedarpp.h  prefix_map.cc  prefix_map.h  prefix_matcher.cc  prefix_matcher.h  prefix_matcher_test.cc
libtext/cws/bilstm-crf/: train.py
libtext/cws/model/: model0.pkl
libtext/jieba/: CMakeLists.txt  dict_trie.h  full_seg.h  hmm_model.h  hmm_seg.h  keyword_extractor_test.cc  keyword_extrator.h  mix_seg.h  mps_seg.h  pos_tagger_test.cc  post_tagger.h  pre_filter.h  pre_filter_test.cc  query_seg.h  seg.h  seg_base.h  seg_tagged.h  segmentor_test.cc  segments_test.cc  text_rank_extractor.h  textrank_test.cc  trie.h  trie_test.cc  unicode.h
libtext/normalize/: emoji_filter.cc  emoji_filter.h  emoji_unicode_alias_codes_en.cc  emoji_unicode_codes_en.cc
libtext/segment/: CMakeLists.txt  dict_trie.h  full_seg.h  hmm_model.h  hmm_seg.h  keyword_extractor_test.cc  keyword_extrator.h  mix_seg.h  mps_seg.h  pos_tagger_test.cc  post_tagger.h  pre_filter.h  pre_filter_test.cc  query_seg.h  seg.h  seg_base.h  seg_tagged.h  segment.cc  segmentor_test.cc  segments_test.cc  text_rank_extractor.h  textrank_test.cc  trie.h  trie_test.cc  unicode.h
