#
# Copyright 2023 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load(
    "//:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

LIBTEXT_ALL_SRC = [
    "common/prefix_map.cc",
    "common/prefix_matcher.cc",
    "normalize/emoji_filter.cc",
    "normalize/emoji_unicode_alias_codes_en.cc",
    "normalize/emoji_unicode_codes_en.cc",
        ]

cc_library(
    name = "libtext",
    srcs = LIBTEXT_ALL_SRC,
    hdrs = glob(["*.h",
                 "*/*.h",
                 "*/**/*.h",
                 "unicode/*.cc",
                 "unicode/**/*.cc"]),
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo"]
)

cc_test(
    name = "textrank_test",
    srcs = ["jieba/textrank_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
     deps = ["@com_google_googletest//:gtest_main","@com_gottingen_turbo//turbo:turbo", "//libtext:libtext"]
)
